--- a/package.json
+++ b/package.json
@@ -8,20 +8,33 @@
     "ios": "expo start --ios",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
-    "server:json": "json-server --watch server/db.json --port 3333"
+    "server:json": "json-server --watch server/db.json --host 192.168.1.7 --port 3333 --delay 1500"
   },
   "dependencies": {
     "@expo-google-fonts/open-sans": "^0.2.3",
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "@react-navigation/stack": "^6.3.20",
     "expo": "~49.0.15",
+    "expo-av": "~13.4.1",
+    "expo-linear-gradient": "~12.3.0",
     "expo-status-bar": "~1.6.0",
     "json-server": "^0.17.4",
     "react": "18.2.0",
     "react-native": "0.72.6",
-    "styled-components": "^6.1.2"
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "styled-components": "^6.1.2",
+    "expo-image-picker": "~14.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
+    "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.56.0",
     "eslint-config-universe": "^12.0.0",
     "prettier": "^3.1.1",
